--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "start": "node index.js"
   },
   "author": "nolanknill",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.1.3"
+  }
 }
